# kmp-webrtc

./: .gitignore  LICENSE  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: ci.yaml
buildSrc/src/main/kotlin/: Constants.kt
example/androidApp/: build.gradle.kts
example/androidApp/src/main/: AndroidManifest.xml
example/androidApp/src/main/res/layout/: activity_call.xml  activity_hall.xml  activity_mediasoup.xml  activity_screen_share.xml
example/androidApp/src/main/res/menu/: connect_menu.xml
example/androidApp/src/main/res/values/: arrays.xml  strings.xml  styles.xml
example/androidApp/src/main/res/xml/: preferences.xml
example/common/cpp/: libKmpWebrtc.cpp  libKmpWebrtc.h
example/iosApp/: Podfile  project.yml
example/iosApp/iosApp/: ARDAppDelegate.m  ARDSettingsModel.h  ARDSettingsModel.m  ARDSettingsStore.h  ARDSettingsStore.m  ARDSettingsViewController.m  ARDToast.h  ARDToast.m  CallViewController.h  CallViewController.m  HallViewController.h  HallViewController.m  Info.plist  main.m
example/linuxApp/: CMakeLists.txt  console_app.cpp  ffmpeg_test.cpp  loopback.cpp  loopback.h  main.cpp  main_window.cpp  main_window.h
example/macApp/: Podfile  project.yml
example/macApp/macApp/: APPRTCAppDelegate.m  APPRTCViewController.m  Info.plist  main.m
example/webApp/: build.gradle.kts
example/webApp/src/jsMain/resources/: index.html
example/webApp/src/jsMain/resources/js/: kmp_webrtc_utils.js
example/winApp/: Resource.h  winApp.cpp  winApp.rc  winApp.sln  winApp.vcxproj  winApp.vcxproj.filters
gradle/: libs.versions.toml
kmp-webrtc/: build.gradle.kts
kmp-webrtc/src/androidMain/kotlin/com/piasy/kmp/webrtc/: AndroidAudioDeviceManager.kt  AndroidPeerConnectionClient.kt  AndroidPeerConnectionClientFactory.kt
kmp-webrtc/src/appleMain/kotlin/com/piasy/kmp/webrtc/: IOSAudioDeviceManager.kt  ObjCPeerConnectionClient.kt  ObjCPeerConnectionClientFactory.kt
kmp-webrtc/src/commonMain/kotlin/com/piasy/kmp/webrtc/: AudioDeviceManager.kt  FieldTrial.kt  IceCandidate.kt  IceServer.kt  PeerConnectionClient.kt  PeerConnectionClientFactory.kt  RtcStatsReport.kt  SessionDescription.kt
kmp-webrtc/src/commonTest/kotlin/com/piasy/kmp/webrtc/: FieldTrialTest.kt
kmp-webrtc/src/cppCommon/cinterop/: WebRTC.def
kmp-webrtc/src/cppCommon/kotlin/com/piasy/kmp/webrtc/: CppPeerConnectionClient.kt  CppPeerConnectionClientFactory.kt
kmp-webrtc/src/iosMain/kotlin/com/piasy/kmp/webrtc/: IOSPeerConnectionClientFactory.kt
kmp-webrtc/src/jsMain/kotlin/com/piasy/kmp/webrtc/: JsPeerConnectionClient.kt  JsPeerConnectionClientFactory.kt  externals.kt
kmp-webrtc/src/linuxMain/kotlin/com/piasy/kmp/webrtc/: LinuxPeerConnectionClient.kt  LinuxPeerConnectionClientFactory.kt
kmp-webrtc/src/macosMain/kotlin/com/piasy/kmp/webrtc/: MacAudioDeviceManager.kt  (+1 more)
scripts/: build_ios_demo.sh  build_linux_demo.sh  build_mac_demo.sh  setup_apple.sh  setup_apple_demo.sh  setup_linux.sh  setup_windows.bat
(+32 files in other folders)
